added comment line to config for ident

--- a/configs/znc.conf
+++ b/configs/znc.conf
@@ -16,7 +16,8 @@ LoadModule = webadmin
 LoadModule = adminlog
 LoadModule = lastseen
 LoadModule = modpython
-LoadModule = ident #changeme, comment this out if you skip the ident step 
+#uncomment this if you need an identserver, read the README.md
+#LoadModule = identserver 
 MaxBufferSize = 500
 ProtectWebSessions = true
 SSLCertFile = ~/.znc/znc.pem
